[package]
name = "demo1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
hyper = "0.14.26"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.1"
notify = "5.1.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.12.0", features = ["full"] }
